Fixed alignment

--- a/src/pages/watch.css
+++ b/src/pages/watch.css
@@ -234,7 +234,8 @@ body {
 
   .feed-header-mobile {
     margin: 10px auto auto auto;
-    max-width: 300px;
+    max-width: 360px;
+    border: 1px solid #ccc;
     color: white; /* Set the color of the links to white */
     justify-content: center;
   }
@@ -251,6 +252,7 @@ body {
   .feed-content-mobile {
     margin: auto auto auto auto;
     max-width: 360px;
+    border: 1px solid #ccc;
     justify-content: center;
     align-items: center;
   }
@@ -258,7 +260,7 @@ body {
   .feed-content-mobile h2 {
     margin: 10px auto auto auto;
     justify-content: center;
-    width: 80%;
+    width: 90%;
     align-items: center;
   }
 
@@ -287,7 +289,7 @@ body {
 }
 
 .each-div-mobile {
-  margin: 10px 10px 10px 10px;
+  margin: 10px auto auto auto;
   flex: 1;
   width: 100%;
 }
